--- a/Tag2/index.html
+++ b/Tag2/index.html
@@ -19,6 +19,8 @@
     />
 
     <style>
+
+
       
       :root {
         font-family: "Open Sans", sans-serif;
@@ -123,6 +125,7 @@
         font-weight: bold;
         font-size: small;
         background-color: burlywood;
+        cursor: pointer;
        
       }
       .tbody {
