--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
         text-emphasis: none;
         color: black;
         text-decoration: none;
-        padding: 0.75em;
+        padding: 0.75rem 1rem;
         font-weight: bold;
         font-size: small;
         background-color: burlywood;
         cursor: pointer;
-       
+       border-radius: 1.5rem;
       }
       .tbody {
 padding-bottom: 1em;
