--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
       p {
         /* Grundschrift */
-         margin-top: 0.7em; 
-        margin-bottom: 0.7em;
+         margin-top: 0.7rem; 
+        margin-bottom: 1rem;
       }
 
       h1,
@@ -55,17 +55,20 @@
       h1 {
         font-size: calc( 1rem * var(--titel-scaler) * var(--titel-scaler) * var(--titel-scaler) *
       var(--titel-scaler));
-      margin-bottom: 0.3rem;
-      margin-top: 2rem;
+      margin-bottom: 1.25rem;
+      margin-top: 2.25rem;
       }
 
       h2 {
         font-size: calc( 1rem * var(--titel-scaler) * var(--titel-scaler) );
-        margin-top: 0.7em
+        margin-top: 1.5rem;
+        margin-bottom: 0.7rem;
       }
 
       h3 {
         font-size: calc(1rem*var(--titel-scaler));
+        margin-top: 1.25rem;
+        margin-bottom: 0.7rem;
       }
 
       h4 {
@@ -233,14 +236,13 @@ h4 { font-size: 0.75rem;
         <img src="schwanz.jpg" alt="">
       <em class="Bildtitel">Mbayo</em>
       <h3>Zehengänger</h3>
+      <p>
         Die Hauskatze ist wie alle Kleinkatzen ein Zehengänger. An den Vorderbeinen hat sie fünf Zehen, wovon eine keinen Bodenkontakt hat, und an den Hinterbeinen vier. Die scharfen gebogenen Krallen dienen unter anderem zum Fangen und Halten der Beute. Sie liegen in Ruheposition durch elastische Bänder zurückgezogen in einer Hauttasche. Sie können zum Beutefang, zum Klettern, zum Markieren des Reviers durch Kratzmarken oder zur Verteidigung „ausgefahren“ werden. 
       </p>
-      <img src="flof.png" alt="">
-      
+      <img src="floff.webp" alt="">
 
       <h2 id="Mbayo">Mbayo</h2>
-      
-
+  
       <p>
         Wir lieben unseren Kater sehr, auch wenn wir manchmal am Morgen aufwachen weil seine Scheisse so sehr stinkt und obwohl wir teilweise fast einen Herzinfarkt bekommen wenn er im Schlaf auf uns drauf springt. Was aber lieben wir an diesem kleinen, flauschigen Lebewesen so sehr? Hier findet ihr eine Tabelare Darstellung was Ich an Mbayo am meisten mag. Die Eins steht dafür was ich nicht so sehr mag und die Zehn für das was ich extrem liebe.
         </p>
