--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ h4 { font-size: 0.75rem;
       </p>
 
       <img src="busl.jpg" alt="">
-      <em class="Bildtitel">Bushaltestellkatze in Freienstein</em>
+      <p><em class="Bildtitel">Bushaltestellkatze in Freienstein</em></p><em class="Bildtitel">Bushaltestellkatze in Freienstein</em>
       
       <p>
         Die Hauskatze im Wildtyp besitzt eine M-förmige Zeichnung auf der Stirn, von den Augen zur Seite gehende „Kajal“-Striche, einen dunklen Aalstrich und dunkle Querstreifen (oder auch Tupfen) an den Körperseiten. Beine und Schwanz sind ebenfalls dunkel gebändert. Ihre Farbe variiert von grau-schwarz bis zu warmen Brauntönen. Die für die Hauskatze typischen Fellzeichnungen werden als Tabby bezeichnet. Neben dem oben beschriebenen Wildtyp, mackerel (= Englisch für Makrele) genannt, haben sich weitere Zeichnungen und eine Vielzahl an Fellfarben herausgebildet. In Europa, Nordamerika und Australien überwiegt die gestromte Zeichnung, die oft mit einer teilweisen Weißfärbung verbunden ist.
@@ -238,6 +238,7 @@ h4 { font-size: 0.75rem;
         Das Skelett der Hauskatze besteht aus über 230 Knochen. Der Schädel der Katze ist kurz und robust gebaut. Die Augenhöhle ist nicht vollständig knöchern geschlossen, der hintere Teil wird durch ein bindegewebiges Band verschlossen. Die Wirbelsäule besteht aus sieben Hals-, 13 Brust-, sieben Lenden-, drei zum Kreuzbein verwachsenen Kreuz- und 20 bis 23 Schwanzwirbeln. Das Schlüsselbein ist lediglich ein in den Musculus brachiocephalicus eingelagerter Knochen, der mit dem übrigen Skelett nicht in Verbindung steht. Am unteren Ende der Schulterblattgräte (Spina scapulae), dem sogenannten Acromion, besitzen Katzen einen nach unten gerichteten Processus hamatus und einen für Katzen typischen nach hinten gerichteten Processus suprahamatus. Der Oberarmknochen besitzt an seinem unteren Ende ein an der Innenseite gelegenes Loch (Foramen supracondylare) zum Durchtritt der Arteria brachialis und des Nervus medianus. Die kräftigen Hinterbeine sind eher auf Springen als auf schnelles Laufen spezialisiert. Die Katze kann dank ihrer kräftigen Muskulatur sehr gut springen und sprinten. Als typischer Ansitzjäger ist sie jedoch kein ausdauernder Läufer.
       </p>
         <img src="schwanz.jpg" alt="">
+        <br>
       <em class="Bildtitel">Mbayo</em>
       <h3>Zehengänger</h3>
       <p>
